# watrbx-game-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Client_2012.sln  RobloxPlayer-Info.plist  build.ninja  cmake_install.cmake  gitignore  rules.ninja
Android/: CMakeLists.txt  cmake_install.cmake  local.properties
Android/NativeShell/: AndroidManifest.xml  build.gradle  how_to_debug_cpp.txt  local.properties  packAndroidAssets.sh
Android/libroblox/: JNIActivityCurlTest.cpp  JNICurlTestHelper.cpp  JNIGLActivity.cpp  JNIInputListener.cpp  JNIMain.cpp  JNIRobloxSettings.cpp  LogManager.cpp
App/: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  cmake_install.cmake
App.BulletPhysics/: App.BulletPhysics.vcxproj  cmake_install.cmake
App.UnitTest/: App.UnitTest.vcxproj  ChatTests.cpp  ContentProviderTest.cpp  HTTPTest.cpp  HttpCacheEntryTest.cpp  LogServiceTest.cpp  SettingsURL.cpp  TestSettings.txt  URLParserTest.cpp  WebParserTest.cpp
App.UnitTest.Lib/: App.UnitTest.Lib.cpp  App.UnitTest.Lib.vcxproj
App.UnitTest.Run/: App.UnitTest.Run.vcxproj
App/NoOpt/: App.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
App/script/: LuaBridge.cpp  LuaSignalBridge.cpp
App/util/: ContentId.cpp  FileSystemIndependent.cpp  LegacyContentTable.cpp  RobloxGoogleAnalytics.cpp  WinInet.cpp  XboxHttp2.cpp
App/v8datamodel/: DataModel.cpp  DataStore.cpp  FriendService.cpp  GameBasicSettings.cpp  KeyframeSequenceProvider.cpp  Stats.cpp  TextBox.cpp  factoryregistration.cpp
App/v8xml/: SerializerV2.cpp
Base/: Base.vcxproj  CMakeCache.txt  cmake_install.cmake
Base.UnitTest/: Base.UnitTest.vcxproj
Base.UnitTest.Lib/: Base.UnitTest.Lib.vcxproj
Base.UnitTest.Run/: Base.UnitTest.Run.vcxproj
Base/rbx/: Crypt.cpp  TaskScheduler.cpp
BuiltInPlugins/: PhysicsAnalyzer.rbxmx  TerrainTools.rbxmx  TransformDragger.rbxmx
BuiltInPlugins/terrain/: 11 - floodfill.lua
CSG/: CSG.vcxproj
Client.LegacyAssemblies/: README.md
Client.LegacyAssemblies/Roblox.Common/: BasicService.cs  Roblox.Common.csproj  app.config
Client.LegacyAssemblies/Roblox.Configuration/: Roblox.Configuration.csproj  app.config
Client.LegacyAssemblies/WebsiteSettings/: Roblox.WebsiteSettings.csproj  csharptojs.config.json  csharptojson.config.json
ClientBase/: ReflectionMetadata.xml  RenderSettingsItem.cpp
ClientShared/: RobloxServicesTools.cpp  cmake_install.cmake
ClientShared/Mac/: CookiesEngine.cpp
CoreScriptConverter2/: CoreScriptConverter2.vcxproj  cscmain.cpp
GameChat/: Microsoft.Xbox.GameChat.XDK.vcxproj
Installer/Bootstrapper/: Bootstrapper.cpp  Bootstrapper.rc  Bootstrapper.vcxproj  FileSystem.cpp  HttpTools.cpp  LegacyDialog.cpp  ProgressDialog.cpp  SharedHelpers.cpp  SharedHelpers.h  ShutdownDialog.cpp  TaskDialog.cpp
Installer/BootstrapperClient/: BootstrapperClient.cpp  BootstrapperClient.vcxproj
Installer/BootstrapperClient.PrepForUpload/: GenerateBootstrappers.bat
Installer/BootstrapperQTStudio/: BootstrapperQTStudio.cpp  BootstrapperQTStudio.vcxproj
Installer/NPRobloxProxy.PrepForUpload/: NPRobloxProxy.PrepForUpload.vcxproj
Installer/QTStudioBootstrapperTemp/: QTStudioBootstrapperTemp.rc
Installer/RccServiceSetup/: RccServiceSetup.vdproj
Installer/RobloxProxy/: Launcher.cpp  RobloxProxy_i.h
Installer/npShared/: RobloxNPPlugin.h
Installer/nproblox/: nproblox.vcxproj  nproblox_main.c
Microsoft.Xbox.Samples.NetworkMesh/: Microsoft.Xbox.Samples.NetworkMesh.vcxproj
Network/: API.cpp  ClientReplicator.cpp  DirectPhysicsReceiver.cpp  GameConfigurer.cpp  Network.vcxproj  NetworkClusterPacketCache.cpp  Players.cpp  ServerReplicator.cpp  cmake_install.cmake
PrepAllForUpload/: PrepAllForUpload.vcxproj
RCCService/: AppSettings.xml  RCCService.cpp  RCCService.rc  RCCService.sln  RCCService.vcxproj
RCCService.PrepForUpload/: RCCService.PrepForUpload.vcxproj
RCCService.Test/: BasicScenarios.cs  LuaScripts.cs  RCCLauncher.cs  RCCService.Test.csproj  RCCService.Test.sln  RobloxTestRigClient.cs  StressSoapTest.cs
RCCService.Thumb.Test/: RCCService.Thumb.Test.csproj  ThumbnailerTests.cs
RCCService/gSOAP/: RCCService.wsdl
RbxTestHooks/: RbxTestHooks.vcxproj
Rendering/: cmake_install.cmake
Roblox.RccServiceArbiter/: IArbiter.cs  JobManager.cs  RccService.cs  Roblox.RccServiceArbiter.csproj  Roblox.RccServiceArbiter.sln  app.config
Roblox.Test/: Roblox.Test.sln
RobloxHybrid/: index.html
RobloxMac/: RobloxPlayerAppDelegate.mm
RobloxModelAnalyzer/: main.cpp
RobloxStudio/: Info.plist  RobloxStudio.rc  RobloxStudio.vcxproj  RobloxStudio.vcxproj.filters  resource.h
RobloxStudio.PrepForUpload/: RobloxStudio.PrepForUpload.vcxproj
RobloxTest/: RobloxTest.vcxproj  Tests.cpp  main.cpp
RobloxTest.MultiPlayerTest.Run/: RobloxTest.MultiPlayerTest.Run.vcxproj
RobloxTest.PhysicsPerfTest.Run/: RobloxTest.PhysicsPerfTest.Run.vcxproj
RobloxTest.PhysicsTests.Run/: RobloxTest.PhysicsTests.Run.vcxproj
RobloxTest.Run/: RobloxTest.Run.vcxproj
ScriptSigner/: ScriptSigner.sln
Tools/: RakNet-Key-Gen.py
Win/: DSVideoCaptureEngine.cpp
WindowsClient/: AppSettings.xml  Application.cpp  WindowsClient.rc  WindowsClient.vcxproj  WindowsClient.vcxproj.filters
WindowsClient.PrepForUpload/: WindowsClient.PrepForUpload.vcxproj
XboxClient/: NSAL.json  UserTranslator.h  XboxClient.vcxproj  XboxService.cpp  fetchfflags.py
boostlibs/: CMakeLists.txt  boost.static.vcxproj  boost.test.vcxproj  cmake_install.cmake
cmake/: configure_android.sh  test-android.sh
iOS/: AppTestiOS-Info.plist  BaseTestiOS-Info.plist  TargetiOS-Info.plist
(+750 files in other folders)
